# tri-temporal-theory

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE_TTN  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
configs/: default.yaml  sparc_local.yaml
data/: readme.txt
docs/: HARMONICS_EXPLANATION.md  HARMONICS_GUIDE.md  RAR_EXPLANATION.md  SIX_HARMONICS_EXPLAINED_ACADEMIC (1).md  faq.md  known_issues.md  methodology.md  predictions.md  rar_analysis_guide.md  results_summary.md  theory_summary.md
outputs/rar/: comparison_logspace.json  rar_data.csv
src/: cli.py  data_io.py  init.py  model_comparison.py  plotting.py  pulsar_timing.py  sparc_analysis.py  statistical_tests.py  train_eval.py  utils.py
src/analysis/: fft_rar.py  harmonic_analysis.py
src/harmonics/: __init__.py  bayesian_model_comparison.py  example_usage.py  harmonic_power_analyzer.py  io_sparc.py  model_harmonics.py  plot_individual_galaxies.py  quick_start.py  randomization_complete_analysis.py  requirements.txt  run_all.py  sparc_harmonic_analyzer.py  validate_new_scales.py
src/models/: baselines.py  ttn_core.py
src/models/analysis/: fft_rar.py  rar_diagnostics.py  rar_fit_logspace.py  rar_relation.py
src/tests/: conftest.py  test_rar_fitting.py  tests_README.md
src/utils/: diagnose_rar_detailed.py  filter_rar_data.py
